# tapper

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs  tosu.rs
